Finish the main part of the webpage

--- a/index.html
+++ b/index.html
@@ -31,34 +31,64 @@
             <a href="" class="navlink">Maqolalar</a>
         </nav>
         <main class="main">
-            <h2 class="title">Title</h2>
+            <h2 class="title">Biz bilan bog’laning</h2>
             <section class="grid">
-                <article class="article grid__box">
-                    <img src="icons/router.png" alt="icon" class="article__icon">
-                    <h3 class="article__title">Article title</h3>
-                    <p class="article__text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eligendi, deserunt distinctio! Assumenda id sit error perspiciatis deserunt unde, aliquid rem natus, nemo saepe repellat.</p>
-                </article>
-                <article class="article grid__box">
-                    <img src="icons/router.png" alt="icon" class="article__icon">
-                    <h3 class="article__title">Article title</h3>
-                    <p class="article__text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eligendi, deserunt distinctio! Assumenda id sit error perspiciatis deserunt unde, aliquid rem natus, nemo saepe repellat.</p>
-                </article>
-                <article class="article grid__box">
-                    <img src="icons/router.png" alt="icon" class="article__icon">
-                    <h3 class="article__title">Article title</h3>
-                    <p class="article__text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eligendi, deserunt distinctio! Assumenda id sit error perspiciatis deserunt unde, aliquid rem natus, nemo saepe repellat.</p>
-                </article>
-                <article class="article grid__box">
-                    <img src="icons/router.png" alt="icon" class="article__icon">
-                    <h3 class="article__title">Article title</h3>
-                    <p class="article__text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eligendi, deserunt distinctio! Assumenda id sit error perspiciatis deserunt unde, aliquid rem natus, nemo saepe repellat.</p>
-                </article>
+                <a href="" class="article grid__box">
+                    <i class="article__icon fa-solid fa-phone"></i>
+                    <h3 class="article__title">Inson ijtimoiy xizmat markazlari (hududiy operatorlar)</h3>
+                </a>
+                <a href="tel:1146" class="article grid__box">
+                    <i class="article__icon fa-solid fa-phone"></i>
+                    <h3 class="article__title">Ishonch telefoni (1146)</h3>
+                </a>
+                <a href="tel:112" class="article grid__box">
+                    <i class="article__icon fa-solid fa-phone"></i>
+                    <h3 class="article__title">Yagona dipetcherlik xizmati (112)</h3>
+                </a>
+                <a href="tel:102" class="article grid__box">
+                    <i class="article__icon fa-solid fa-phone"></i>
+                    <h3 class="article__title">Ichki ishlar boshqarmasi (102)</h3>
+                </a>
+            </section>
+            <h2 class="title">Xizmatlar</h2>
+            <section class="grid">
+                <a href="" class="article grid__box">
+                    <i class="article__icon fa-solid fa-scale-balanced"></i>
+                    <h3 class="article__title">Huquqiy yordam (yurist)</h3>
+                </a>
+                <a href="" class="article grid__box">
+                    <i class="article__icon fa-solid fa-hand-holding-hand"></i>
+                    <h3 class="article__title">Psixologik yordam (psixolog)</h3>
+                </a>
+                <a href="" class="article grid__box">
+                    <i class="article__icon fa-solid fa-briefcase"></i>
+                    <h3 class="article__title">“Inson” ijtimoiy xizmatlar markazlari</h3>
+                </a>
+            </section>
+            <h2 class="title">Ma'lumot</h2>
+            <section class="grid">
+                <a href="" class="article grid__box">
+                    <i class="article__icon fa-solid fa-award"></i>
+                    <h3 class="article__title">Imtiyozlar</h3>
+                </a>
+                <a href="" class="article grid__box">
+                    <i class="article__icon fa-solid fa-shield-halved"></i>
+                    <h3 class="article__title">Ijtimoiy himoya daftarlari</h3>
+                </a>
+                <a href="" class="article grid__box">
+                    <i class="article__icon fa-solid fa-people-arrows"></i>
+                    <h3 class="article__title">Ijtimoiy xizmatlar</h3>
+                </a>
+                <a href="" class="article grid__box">
+                    <i class="article__icon fa-brands fa-accessible-icon"></i>
+                    <h3 class="article__title">Nogironligi bo’lgan xotin-qizlarga imtiyozlar</h3>
+                </a>
             </section>
         </main>
     </div>
     <footer class="footer">
         <div class="container">
-            <div class="flex">
+            <div class="flex flexfooter">
                 <article class="footer__article">
                     <a href="#" class="logo footer__logo">Himoyachim</a>
                     <div>&copy; 2024 Lorem ipsum</div>
