Finish the first implementation

--- a/index.html
+++ b/index.html
@@ -17,13 +17,14 @@
             </div>
             <div class="">
                 <select name="lang">
-                    <option value="uz">Uz</option>
-                    <option value="uz">Ru</option>
-                    <option value="uz">En</option>
+                    <option value="uz">O'zbek</option>
+                    <option value="kr">Qaraqalpaq</option>
+                    <option value="ru">Русский</option>
+                    <option value="en">English</option>
                 </select>
             </div>
         </header>
-        <nav class="nav">
+        <nav class="nav nowrap">
             <a href="" class="navlink">Biz haqimizda</a>
             <a href="" class="navlink">Xizmatlar</a>
             <a href="" class="navlink">Ma'lumot</a>
@@ -106,11 +107,17 @@
                     </div>
                 </article>
                 <article class="footer__article">
-                    <h3 class="footer__title">Lorem, ipsum.</h3>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sint odio sapiente nobis reprehenderit quasi cum tenetur, autem obcaecati sit ratione!</p>
+                    <h3 class="footer__title">Bog'lanish</h3>
+                    <p>Manzil: Surxondaryo viloyati, Oltinsoy tumani, Ijtimoiy Himoya Milliy Agentligi</p>
+                    <div class="footer_row">Email: <a href="" class="footer__link">example@gmail.com</a></div>
+                    <div class="footer_row">Telefon: <a href="" class="footer__link">+998112223344</a></div>
                 </article>
             </div>
         </div>
     </footer>
+    <a href="files/Himoya_flaer.pdf" target="_blank" class="help">
+        <i class="help__icon fa-solid fa-circle-question"></i>
+        <button class="help__button">Yordam</button>
+    </a>
 </body>
 </html>
